(fix) link wrapping

--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -232,6 +232,10 @@ main, .footer {
             @include Paragraph($spacing: false);
             padding: $spacing-10 $spacing-8 $spacing-8 0;
             border-bottom: 1px solid var(--color-border);
+
+            a {
+                white-space: unset !important;
+            }
         }
 
         &.--ghost {
